<resources>
    <string name="app_name">TU MEJOR VIAJE</string>
    <string name="text_login">¿Estas listo?</string>
    <string name="text_login2">Es momento de hacer maletas...</string>
    <string name="text_hint_username_email">Nombre de usuario o email</string>
    <string name="text_hint_password">Contraseña</string>
    <string name="button_login">Ingresar</string>
    <string name="radioButton_rememberme">Mantener mi sesión iniciada</string>
    <string name="loginFacebook">Ingresa con Facebook</string>
    <string name="loginGoogle">Ingresa con Google</string>
    <string name="button_register">Registrate</string>
    <string name="register_title">¡Bienvenido a Tu Mejor Viaje!</string>
    <string name="register_username">Nombre de usuario</string>
    <string name="register_password">Contraseña</string>
    <string name="register_confirm_password">Confirmar contraseña</string>
    <string name="register_email">Email</string>
    <string name="register_description">Descripcion de tu cuenta (Estudiante, viajero, turista con experiencia)</string>
    <string name="register_sign_in">Registrarse</string>
    <string name="home_button_name">Mi feed</string>
    <string name="search_button_name">Buscar</string>
    <string name="profile_button_name">Mi perfil</string>
    <string name="upload_button_name">Subir</string>
    <string name="chat_button_name">Mis chats</string>
    <string name="text_search">Buscar</string>
    <string name="from_text">Pais de origen</string>
    <string name="lives_text">Pais donde vive o visita</string>
    <string name="post_text">Mis publicaciones</string>
    <string name="uploadTitle">Titulo</string>
    <string name="uploadInitialDescription">Descripción inicial (mostrado en el feed):</string>
    <string name="uploadBody">Cuerpo del post:</string>
    <string name="uploadTag">Tags de búsqueda:</string>
    <string name="uploadTagViaje">VIAJES</string>
    <string name="uploadTagPrecio">PRECIO</string>
    <string name="uploadTagDocumentos">DOCUMENTOS</string>
    <string name="uploadTagIntercambio">INTERCAMBIO</string>
    <string name="uploadTagVivienda">VIVIENDA</string>
    <string name="uploadPhotoDesc">Foto .png o .jpg, Video .mp4 de 1 min maximo, 1093 x 600 ( Resolución minima)</string>
    <string name="upload_post_button">Subir nuevo post</string>
    <string name="emptyTitle">Se requiere un título para el post</string>
    <string name="emptyInitDescription">Se requiere una descripción inicial en el post</string>
    <string name="emptyPostBody">Se requiere agregar el cuerpo del post</string>
    <string name="validatedUpload">Validado</string>
    <string name="new_chat_start_new_chat">Comenzar un nuevo chat</string>
    <string name="uploadAuthor">"Por: "</string>
    <string name="emptyPostPhoto">Se requiere una foto disponible para el post</string>
    <string name="uploadDate">"Subido en "</string>
    <string name="new_here">¿No tienes una cuenta aún?</string>
    <string name="socialNetwork">¿Usando otras redes sociales?</string>
    <string name="facebook_app_id">1259889437860147</string>
    <string name="fb_login_protocol_scheme">fb1259889437860147</string>
    <string name="required">Campo obligatorio</string>
    <string name="requirement_photo">Jpg/png. (400*400 a 1500 * 1500)</string>
    <string name="missingFields">Faltan datos</string>
    <string name="doesNotEqualPW">Las contraseñas no coinciden</string>
    <string name="invalidString">La dirección de email no es válida</string>
    <string name="emptyName">Se requiere un nombre de usuario</string>
    <string name="emptyPassword">Se requiere una contraseña</string>
    <string name="emptyEmail">Se requiere un correo electronico</string>
    <string name="emptyDescription">Se requiere una descripción del usuario</string>

</resources>