<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    xmlns:tools="http://schemas.android.com/tools"
    >


    <ImageView
        android:id="@+id/form_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:src="@drawable/wallper_text_and_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/photoClickView"
        android:layout_width="250dp"
        android:layout_height="175dp"
        android:src="@drawable/wallper_text"
        android:layout_marginTop="50sp"
        app:layout_constraintBottom_toTopOf="@id/editTextTitle"
        app:layout_constraintTop_toTopOf="@id/form_frame"
        app:layout_constraintStart_toStartOf="@id/form_frame"
        app:layout_constraintEnd_toEndOf="@id/form_frame"
        />

    <ImageView
        android:id="@+id/imageIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/icons8_image_add"
        app:tint="?attr/colorOnPrimary"
        app:layout_constraintBottom_toTopOf="@id/textPhotoAdd"
        app:layout_constraintTop_toTopOf="@id/photoClickView"
        app:layout_constraintStart_toStartOf="@id/photoClickView"
        app:layout_constraintEnd_toEndOf="@id/photoClickView"
        />

    <TextView
        android:id="@+id/textPhotoAdd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginEnd="80dp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textColor="?attr/colorOnPrimary"
        app:layout_constraintBottom_toBottomOf="@id/photoClickView"
        app:layout_constraintEnd_toEndOf="@id/photoClickView"
        app:layout_constraintStart_toStartOf="@id/photoClickView"
        app:layout_constraintTop_toBottomOf="@id/imageIcon"
        android:text="@string/uploadPhotoDesc"/>

    <TextView
        android:id="@+id/titleIndicator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/uploadTitle"
        android:textStyle="bold"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="40dp"
        android:textColor="?attr/colorOnPrimary"
        app:layout_constraintStart_toStartOf="@id/form_frame"
        app:layout_constraintEnd_toEndOf="@id/form_frame"
        app:layout_constraintTop_toBottomOf="@id/photoClickView"
        app:layout_constraintBottom_toTopOf="@id/editTextTitle"/>


    <EditText
        android:id="@+id/editTextTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/form_frame"
        app:layout_constraintTop_toBottomOf="@id/titleIndicator"
        app:layout_constraintStart_toStartOf="@+id/form_frame"
        app:layout_constraintBottom_toTopOf="@id/initDescIndicator"/>

    <TextView
        android:id="@+id/initDescIndicator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/uploadInitialDescription"
        android:textColor="?attr/colorOnPrimary"
        android:textStyle="bold"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="40dp"
        app:layout_constraintStart_toStartOf="@id/form_frame"
        app:layout_constraintEnd_toEndOf="@id/form_frame"
        app:layout_constraintTop_toBottomOf="@id/editTextTitle"
        app:layout_constraintBottom_toTopOf="@id/editTextTitle"/>


    <EditText
        android:id="@+id/editTextDescInit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="@+id/form_frame"
        app:layout_constraintTop_toBottomOf="@id/initDescIndicator"
        app:layout_constraintStart_toStartOf="@+id/form_frame"
        app:layout_constraintBottom_toTopOf="@id/PostBodyindicator"/>

    <TextView
        android:id="@+id/PostBodyindicator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="?attr/colorOnPrimary"
        android:text="@string/uploadBody"
        android:textStyle="bold"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="40dp"
        app:layout_constraintStart_toStartOf="@id/form_frame"
        app:layout_constraintEnd_toEndOf="@id/form_frame"
        app:layout_constraintTop_toBottomOf="@id/editTextDescInit"
        app:layout_constraintBottom_toTopOf="@id/editTextPostBody"/>




    <EditText
        android:id="@+id/editTextPostBody"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="@+id/form_frame"
        app:layout_constraintTop_toBottomOf="@id/PostBodyindicator"
        app:layout_constraintStart_toStartOf="@+id/form_frame"
        app:layout_constraintBottom_toTopOf="@id/checkBoxDocumentos"
        />

    <CheckBox
        android:id="@+id/checkBoxViaje"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/uploadTagViaje"
        app:layout_constraintBottom_toTopOf="@id/checkBoxPrecio"
        app:layout_constraintEnd_toStartOf="@id/checkBoxDocumentos"
        android:textColor="?attr/colorOnPrimary"
        app:layout_constraintStart_toStartOf="@id/form_frame"
        app:layout_constraintTop_toBottomOf="@id/editTextPostBody" />

    <CheckBox
        android:id="@+id/checkBoxPrecio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/uploadTagPrecio"
        android:textColor="?attr/colorOnPrimary"
        app:layout_constraintBottom_toTopOf="@id/uploadPostButton"
        app:layout_constraintEnd_toStartOf="@id/checkBoxIntercambio"
        app:layout_constraintStart_toStartOf="@id/form_frame"
        app:layout_constraintTop_toBottomOf="@id/checkBoxViaje"

        />

    <CheckBox
        android:id="@+id/checkBoxDocumentos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/uploadTagDocumentos"
        android:textColor="?attr/colorOnPrimary"
        app:layout_constraintBottom_toTopOf="@id/checkBoxIntercambio"
        app:layout_constraintEnd_toStartOf="@id/checkBoxVivienda"
        app:layout_constraintStart_toEndOf="@id/checkBoxViaje"
        app:layout_constraintTop_toBottomOf="@id/editTextPostBody" />

    <CheckBox
        android:id="@+id/checkBoxIntercambio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/uploadTagIntercambio"
        app:layout_constraintStart_toEndOf="@id/checkBoxPrecio"
        app:layout_constraintEnd_toStartOf="@id/checkBoxVivienda"
        app:layout_constraintTop_toBottomOf="@id/checkBoxDocumentos"
        app:layout_constraintBottom_toTopOf="@id/uploadPostButton"
        android:textColor="?attr/colorOnPrimary"
        />

    <CheckBox
        android:id="@+id/checkBoxVivienda"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/uploadTagVivienda"
        android:textColor="?attr/colorOnPrimary"
        app:layout_constraintStart_toEndOf="@id/checkBoxDocumentos"
        app:layout_constraintEnd_toEndOf="@id/form_frame"
        app:layout_constraintBottom_toTopOf="@id/uploadPostButton"
        app:layout_constraintTop_toBottomOf="@id/editTextPostBody"
        />

    <Button
        android:id="@+id/uploadPostButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/form_frame"
        app:layout_constraintTop_toBottomOf="@id/checkBoxIntercambio"
        app:layout_constraintEnd_toEndOf="@id/form_frame"
        android:textColor="?attr/colorOnPrimary"
        app:layout_constraintStart_toStartOf="@id/form_frame"
        android:text="@string/upload_post_button"
        />


</androidx.constraintlayout.widget.ConstraintLayout>