<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary"
    tools:context=".ui.loginRegister.LoginOrRegisterActivity">

    <ImageView
        android:id="@+id/imageWallper2"
        android:layout_width="wrap_content"
        android:layout_height="735dp"
        android:src="@drawable/wallpaper_travel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/imageShape3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/imageWallper2"
        app:layout_constraintTop_toTopOf="@+id/imageWallper2"
        app:srcCompat="@drawable/wallper_text_and_icon" />

    <ImageView
        android:id="@+id/imageShape4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="470dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageShape3"
        app:layout_constraintEnd_toEndOf="@+id/imageShape3"
        app:layout_constraintStart_toStartOf="@+id/imageShape3"
        app:layout_constraintTop_toTopOf="@+id/imageShape3"
        app:srcCompat="@drawable/wallper_text" />

    <TextView
        android:id="@+id/textRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_medium"
        android:textStyle="bold"
        android:text="@string/text_login"
        android:textColor="?attr/colorOnPrimary"
        android:textSize="32sp"
        app:layout_constraintBottom_toTopOf="@+id/textLogin2"
        app:layout_constraintEnd_toEndOf="@+id/imageShape4"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/imageShape4"
        app:layout_constraintTop_toTopOf="@+id/imageShape4"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/textLogin2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_medium"
        android:textStyle="bold"
        android:text="@string/text_login2"
        android:textColor="?attr/colorOnPrimary"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageShape4"
        app:layout_constraintEnd_toEndOf="@+id/imageShape4"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/imageShape4"
        app:layout_constraintTop_toBottomOf="@+id/textRegister" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="0dp"
        android:layout_height="170dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toEndOf="@+id/imageShape3"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/imageShape3"
        app:layout_constraintTop_toBottomOf="@+id/imageShape4"
        app:srcCompat="@drawable/wallper_login" />

    <EditText
        android:id="@+id/editTextTextUserName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="@string/text_hint_username_email"
        android:textColorHint="?attr/colorOnSecondary"
        android:textColorHighlight="?attr/colorOnSecondary"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/imageView2"
        app:layout_constraintStart_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="@+id/imageView2" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="@string/text_hint_password"
        android:textColorHint="?attr/colorOnSecondary"
        android:textColorHighlight="?attr/colorOnSecondary"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/imageView2"
        app:layout_constraintStart_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextUserName" />

    <RadioButton
        android:id="@+id/radioButtonRememberme"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="60dp"
        android:text="@string/radioButton_rememberme"
        android:fontFamily="@font/poppins_medium"
        android:textStyle="bold"
        android:textColor="?attr/colorOnSecondary"
        app:layout_constraintEnd_toEndOf="@+id/imageView2"
        app:layout_constraintStart_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword" />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:text="@string/button_login"
        android:fontFamily="@font/poppins_medium"
        android:textColor="?attr/colorOnPrimary"
        app:layout_constraintEnd_toEndOf="@+id/imageShape3"
        app:layout_constraintStart_toStartOf="@+id/imageShape3"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <TextView
        android:id="@+id/tvSociaNetworks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/socialNetwork"
        app:layout_constraintEnd_toEndOf="@id/imageShape3"
        app:layout_constraintStart_toStartOf="@id/imageShape3"
        app:layout_constraintBottom_toTopOf="@id/go_button_login"
        app:layout_constraintTop_toBottomOf="@id/buttonLogin"
        />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/go_button_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toEndOf="@id/imageShape3"
        app:layout_constraintStart_toStartOf="@id/imageShape3"
        app:layout_constraintBottom_toTopOf="@id/fb_login_button"
        app:layout_constraintTop_toBottomOf="@id/tvSociaNetworks"
        />

    <com.facebook.login.widget.LoginButton
        xmlns:facebook="http://schemas.android.com/apk/res-auto"
        android:id="@+id/fb_login_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        facebook:com_facebook_login_text="@string/loginFacebook"
        app:layout_constraintStart_toStartOf="@id/imageShape3"
        app:layout_constraintEnd_toEndOf="@id/imageShape3"
        app:layout_constraintTop_toBottomOf="@id/go_button_login"
        app:layout_constraintBottom_toTopOf="@id/tvNewHere"/>

    <TextView
        android:id="@+id/tvNewHere"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_here"
        app:layout_constraintEnd_toEndOf="@id/imageShape3"
        app:layout_constraintStart_toStartOf="@id/imageShape3"
        app:layout_constraintBottom_toTopOf="@id/RegisterButton1"
        app:layout_constraintTop_toBottomOf="@id/fb_login_button"
        />

    <Button
        android:id="@+id/RegisterButton1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/button_register"
        android:textColor="?attr/colorOnPrimary"
        app:layout_constraintBottom_toBottomOf="@+id/imageShape3"
        app:layout_constraintEnd_toEndOf="@+id/imageShape3"
        app:layout_constraintStart_toStartOf="@+id/imageShape3"
        app:layout_constraintTop_toBottomOf="@+id/fb_login_button" />

</androidx.constraintlayout.widget.ConstraintLayout>